--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ python-dotenv
 langchain
 PyPDF2
 faiss-cpu
-langchain_google_genai
-langchain_openai
-langchain_core
-langchain_community
+langchain-openai
 langserve
 fastapi
 uvicorn
-ollama
+langchain-core
+langchain-community
